--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@ footer p{font-family:'Space Mono',monospace;font-size:9px;letter-spacing:1.5px;c
   </div>
   <div class="hero-right">
     <div class="hero-photo-wrap" id="hP">
-      <img src="./WhatsApp Image 2026-02-19 at 8.22.04 AM (1).jpeg' width='300' height='380' viewBox='0 0 300 380'%3E%3Crect fill='%231a1a1a' width='300' height='380'/%3E%3Ccircle cx='150' cy='130' r='55' fill='%23252525'/%3E%3Cellipse cx='150' cy='320' rx='90' ry='72' fill='%23252525'/%3E%3Ctext x='150' y='210' text-anchor='middle' fill='%23f0c040' font-family='Georgia' font-size='11' letter-spacing='2'%3EYour Photo%3C/text%3E%3C/svg%3E" alt="Babli - Digital Marketing Specialist">
+      <img src="WhatsApp Image 2026-02-19 at 8.22.04 AM (1).jpeg' width='300' height='380' viewBox='0 0 300 380'%3E%3Crect fill='%231a1a1a' width='300' height='380'/%3E%3Ccircle cx='150' cy='130' r='55' fill='%23252525'/%3E%3Cellipse cx='150' cy='320' rx='90' ry='72' fill='%23252525'/%3E%3Ctext x='150' y='210' text-anchor='middle' fill='%23f0c040' font-family='Georgia' font-size='11' letter-spacing='2'%3EYour Photo%3C/text%3E%3C/svg%3E" alt="Babli - Digital Marketing Specialist">
     </div>
     <div class="hero-stats" id="hS">
       <div class="stat-card"><div><div class="stat-num">3+</div><div class="stat-label">Yrs Exp</div></div></div>
